# INT1-Project-Team04

./: .env.dev.example  .gitignore  README.md
mcp-server/: .env.example  .gitignore  pyproject.toml  python.md
mcp-server/data/: lawd_codes.json
mcp-server/docs/: team-guide.md
mcp-server/scripts/: create_tables.py  dump_raw_responses.py  export_tool_schema.py  probe_all_tools.py  seed_auction_source.py  seed_jobs_source.py  seed_law_source.py  seed_real_estate_source.py
mcp-server/src/mcp_server/: __init__.py  __main__.py  config.py  server.py
mcp-server/src/mcp_server/db/: __init__.py  base.py  models.py  session.py
mcp-server/src/mcp_server/domains/: __init__.py
mcp-server/src/mcp_server/observability/: __init__.py  tracing.py
mcp-server/src/mcp_server/sources/: __init__.py  api_source_service.py  crawl_source_service.py  errors.py  result.py
mcp-server/src/mcp_server/tools/: __init__.py  _passthrough.py  auction.py  jobs.py  law.py  real_estate.py
mcp-server/tests/: conftest.py  test_server.py  test_smoke.py
mcp-server/tests/db/: test_models.py
mcp-server/tests/fixtures/: molit_apt_rent_sample.xml  molit_apt_trade_empty.xml  molit_apt_trade_sample.xml  molit_offi_rent_sample.xml  molit_offi_trade_sample.xml  molit_rh_rent_error.xml  molit_rh_rent_sample.xml
mcp-server/tests/observability/: test_tracing.py
mcp-server/tests/scripts/: test_export_tool_schema.py
mcp-server/tests/sources/: test_api_source_service.py  test_crawl_source_service.py
mcp-server/tests/tools/: test_auction.py  test_jobs.py  test_law.py  test_real_estate.py
(+258 files in other folders)
