[project]
name = "mcp-server"
version = "0.1.0"
description = "지켜봐줄게 — Python MCP Server (크롤러 + 공공API 연동)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
    "playwright>=1.47.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "pgvector>=0.3.0",
    "python-dotenv>=1.0.1",
    "langfuse>=2.40.0",
    "beautifulsoup4>=4.12.3",
    "trafilatura>=1.12.0",
]

[project.scripts]
mcp-server = "mcp_server.server:main"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "pytest-cov>=5.0.0",
    "aiosqlite>=0.22.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]
